--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-
+    <main>
+        <h1>Task Manager App</h1>
+        <input type="text" id="taskInput" placeholder="task">
+        <input type="button" id="addTaskBtn" value="Add Task">
+        <div id="filterBtnContainer">
+            <button>All</button>
+            <button>Completed</button>
+            <button>Active</button>
+        </div>
+        <button id="sortBtn">Sort By Due-Date</button>
+        <ul></ul>
+    </main>
 </body>
 
 </html>
