--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Task Manager App">
     <meta property="og:description" content="Keep track of your tasks and deadlines easily.">
 
-    <title>Document</title>
+    <title>Task Manager</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
